set up nav, content,footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Project1</title>
+    <meta name="viewport" content="width=device-giwidth, initial-scale=1.0" />
+    <title>Pug Paradise</title>
     <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
-    <h1>Porject1</h1>
-    <h2>About</h2>
+    <nav>
+      <div class="main-nav">
+        <h4>Who Are Pugs?</h4>
+        <h4>Gallery</h4>
+        <h4>Fun Facts</h4>
+        <h4>Pug Meet Up</h4>
+      </div>
+      <div>
+        <h4>Join Pug's Club</h4>
+      </div>
+    </nav>
+
+    <section>
+      <h1>Who Are Pugs?</h1>
+      <h3>
+        Pugs are small, affectionate dogs with big personalities. Known for
+        their wrinkled faces and expressive eyes, they are one of the oldest
+        breeds, originating in ancient China. Pugs were bred to be companions
+        for royalty and have carried their charming and loyal nature into modern
+        homes.
+      </h3>
+    </section>
+    <footer>© 2024 Pug Paradise. All rights reserved.</footer>
   </body>
 </html>
