nav and footer are now centered

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4>Fun Facts</h4>
         <h4>Pug Meet Up</h4>
       </div>
-      <div>
+      <div class="log-in">
         <h4>Join Pug's Club</h4>
       </div>
     </nav>
