set up hero section left and right

--- a/index.html
+++ b/index.html
@@ -19,15 +19,18 @@
       </div>
     </nav>
 
-    <section>
-      <h1>Who Are Pugs?</h1>
-      <h3>
-        Pugs are small, affectionate dogs with big personalities. Known for
-        their wrinkled faces and expressive eyes, they are one of the oldest
-        breeds, originating in ancient China. Pugs were bred to be companions
-        for royalty and have carried their charming and loyal nature into modern
-        homes.
-      </h3>
+    <section class="hero-section">
+      <div class="hero-left">
+        <h1>Who Are Pugs?</h1>
+        <h3>
+          Pugs are small, affectionate dogs with big personalities. Known for
+          their wrinkled faces and expressive eyes, they are one of the oldest
+          breeds, originating in ancient China. Pugs were bred to be companions
+          for royalty and have carried their charming and loyal nature into
+          modern homes.
+        </h3>
+      </div>
+      <div class="hero-right">edme</div>
     </section>
     <footer>© 2024 Pug Paradise. All rights reserved.</footer>
   </body>
