--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
           modern homes.
         </h3>
       </div>
-      <div class="hero-right">edme</div>
+      <div class="hero-right">
+        <img src="/images/pug with a toy.jpg" alt="pug with a toy" />
+      </div>
     </section>
     <footer>© 2024 Pug Paradise. All rights reserved.</footer>
   </body>
