--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h4>Pug Meet Up</h4>
       </div>
       <div class="log-in">
-        <h4>Join Pug's Club</h4>
+        <button class="btn">Join Pug's Club Today</button>
       </div>
     </nav>
 
