add pug paradise logo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <nav>
       <div class="main-nav">
-        <h4>Who Are Pugs?</h4>
+        <div class="logo">
+          <img src="images/pug paradice_logo.png" alt="" />
+        </div>
+        <h4>What's Pug Paradise?</h4>
         <h4>Gallery</h4>
         <h4>Fun Facts</h4>
         <h4>Pug Meet Up</h4>
@@ -21,13 +24,13 @@
 
     <section class="hero-section">
       <div class="hero-left">
-        <h1>Who Are Pugs?</h1>
+        <h1>Welcome to Pug Paradise!</h1>
         <h3>
-          Pugs are small, affectionate dogs with big personalities. Known for
-          their wrinkled faces and expressive eyes, they are one of the oldest
-          breeds, originating in ancient China. Pugs were bred to be companions
-          for royalty and have carried their charming and loyal nature into
-          modern homes.
+          Your ultimate destination to celebrate all things pug! From their
+          adorable snorts to their big personalities, Pug Paradise is a place
+          where pug lovers unite. Whether you’re here to learn about these
+          delightful companions, browse our gallery, or connect with fellow pug
+          enthusiasts, we’ve got you covered!
         </h3>
       </div>
       <div class="hero-right">
