update logo min size, add secondary button, add padding to hero-left

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="logo">
           <img src="images/pug paradice_logo.png" alt="" />
         </div>
-        <h2>What's Pug Paradise?</h2>
-        <h2>Gallery</h2>
-        <h2>Fun Facts</h2>
-        <h2>Pug Meet Up</h2>
+        <h2 class="nav-links">What's Pug Paradise?</h2>
+        <h2 class="nav-links">Gallery</h2>
+        <h2 class="nav-links">Fun Facts</h2>
+        <h2 class="nav-links">Pug Meet Up</h2>
       </div>
       <div class="log-in">
         <button class="btn">Join Pug's Club Today</button>
@@ -30,8 +30,10 @@
           adorable snorts to their big personalities, Pug Paradise is a place
           where pug lovers unite. Whether you’re here to learn about these
           delightful companions, browse our gallery, or connect with fellow pug
-          enthusiasts, we’ve got you covered!
+          enthusiasts, we’ve got you covered! Still not sure if a pug right for
+          you?
         </p>
+        <button class="secondary-btn">Learn more about pugs</button>
       </div>
       <div class="hero-right">
         <img src="/images/pug with a toy.jpg" alt="pug with a toy" />
